syntax = "proto3";

option csharp_namespace = "WereHouse.Server";

package werehouse;

message Product{
	string id = 1;
	string name = 2;
	int32 cantidad = 3;
}

service WereHouse{
	rpc GetProducttById (ProductID) returns (Product){}
	rpc GetProducttByName (ProductName) returns (Product){}
	rpc AddProducttById (Product) returns (ProductID){}
	rpc UpdateProducttById (Product) returns (Product){}
}

message ProductID {
	string id = 1;
}

message ProductName{
	string name = 1;
}

message ErrorResponse {
	string razon = 1;
	repeated string detalle = 2;
}